--- a/public/templates/main_page.html
+++ b/public/templates/main_page.html
@@ -3,7 +3,14 @@
 {% block title %}Ваша почта{% endblock %}
 
 {% block content %}
-    <a href="{% url "send_email_page" %}"><div class="menu-item">Написать письмо</div></a>
-    <a href="{% url "inbox_page" %}"><div class="menu-item">Входящие {% if total_new_letters %}({{ total_new_letters }}){% endif %}</div></a>
-    <a href="{% url "sent_page" %}"><div class="menu-item">Исходящие</div></a>
+
+    {% if user.is_authenticated %}
+        <a href="{% url "logout" %}"><div class="menu-item">Выход</div></a>
+        <a href="{% url "send_email_page" %}"><div class="menu-item">Написать письмо</div></a>
+        <a href="{% url "inbox_page" %}"><div class="menu-item">Входящие {% if total_new_letters %}({{ total_new_letters }}){% endif %}</div></a>
+        <a href="{% url "sent_page" %}"><div class="menu-item">Исходящие</div></a>
+    {% else %}
+        <a href="{% url "login" %}"><div class="menu-item">Войти в почтовый ящик</div></a>
+        <a href="/"><div class="menu-item">Получить почтовый ящик</div></a>
+    {% endif %}
 {% endblock %}
