--- a/mail_box/templates/mail_box/sent.html
+++ b/mail_box/templates/mail_box/sent.html
@@ -3,22 +3,6 @@
 {% block title %}Письмо{% endblock %}
 
 {% block content %}
-    {% if letters %}
-        {% for letter in letters %}
-            <div class="letter">
-                <a href="{% url "letter_page" letter.id%}"><div>{{ letter.message.header }}</div></a>
-                    <div>Получатели: [
-                        {% for addressee in letter.message.addressees_set.all %}
-                            {% if forloop.last %}
-                                <span>{{ addressee }}</span>
-                            {% else %}
-                                <span>{{ addressee }} | </span>
-                            {% endif %}
-                        {% endfor %}
-                    ]</div>
-            </div>
-        {% endfor %}
-    {% endif %}
-
+    {% include "mail_box/letter_list.html" %}
 <a href="{% url "main_page" %}"><div class="menu-item">На главную.</div></a>
 {% endblock %}
