--- a/public/static/main.css
+++ b/public/static/main.css
@@ -61,3 +61,10 @@ a:active {
     border-bottom: gray groove 1px;
 }
 
+.messages .success {
+    background-color: chartreuse;
+    margin: 3px;
+    padding: 5px;
+    border: black thin groove;
+}
+
